--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,6 @@
 name: JavaScript
 on:
-  push:
-    branches:
-      - master
-  pull_request:
+  - push
 jobs:
   lint:
     runs-on: ubuntu-latest
